Wed Mar  7 14:16:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IFR_Client/IFR_Base.pidl:
          Include normal idl file

        * tao/IFR_Client/IFR_Client.mpc:
          Generate export headers

        * tao/IFR_Client/ifr_client_export.h:
        * tao/IFR_Client/ifr_client_skel_export.h:
          Removed from svn, now generated as part of the build

Wed Mar  7 10:02:59 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for release

Wed Mar 07 09:04:40 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.1.0 released.

Fri Mar  2 12:33:17 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IFR_Client/IFR_Client.mpc:
        * tao/tao.mpc:
          Added missing files for install

Thu Mar 1 13:52:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>

        * tao/DynaicAny/DynValue_i.cpp:
        * tests/DynValue_Test/Analyzer.cpp:
          Missing .in () for vars.

Thu Mar 1 11:45:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>

        * tests/DynValue_Test/main.cpp:
          Removed fuzz warning about NULL by changing case to Null.
          These are ACE_DEBUG text messages about Null ValueTypes not
          NULL pointer checks.

Thu Mar 1 11:27:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>

        * tao/Valuetype_Adapter.h:
        * tao/AnyTypeCode/Any_Impl.cpp:
        * tao/Valuetype/Valuetype_Adapter_Impl.h:
        * tao/Valuetype/Valuetype_Adapter_Impl.cpp:
          Removed dependancy on ValueBase.h within Any_Impl.cpp using the adapter.

Wed Feb 29 16:30:00 UTC 2012  Simon Massey <simon dot massey at prismtech dot com>

        * TAO_IDL/be/be_visitor_typecode/value_typecode.cpp:
          Allow VM_TRUNCATABLE to be recorded in the typecode.

        * TAO_IDL/be/be_visitor_valuetype/any_op_cs.cpp:
          Stop the Any insertion of Valuetypes setting the any typecode to