@@ -14,6 +14,7 @@ TAO_BEGIN_VERSIONED_NAMESPACE_DECL
 
 TAO_DynEnum_i::TAO_DynEnum_i (CORBA::Boolean allow_truncation)
   : TAO_DynCommon (allow_truncation)
+  , value_ (0u)
 {
 }
 
